--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -4,7 +4,7 @@
 
 	<!-- <navSearch /> -->
 
-	<!-- <noData height="{{100}}" title="{{'暂无数据'}}"/> -->
+	<noData height="{{100}}" title="{{'暂无数据'}}"/>
 
 	<!-- <swiper bannerList="{{bannerList}}" /> -->
 
