--- a/pages/shop/index.wxss
+++ b/pages/shop/index.wxss
@@ -18,7 +18,6 @@
   background-color: #fff;
   padding: 0 20rpx;
   margin-top: 20rpx;
-  /* margin: 20rpx 20rpx 0 20rpx; */
   box-sizing: border-box;
 }
 
@@ -42,7 +41,6 @@
   flex-direction: column;
   align-items: flex-start;
 }
-
 
 .row {
   display: flex;
@@ -87,10 +85,9 @@
 }
 
 .sku-price {
-  font-size: 26rpx;
+  font-size: 28rpx;
   font-family: ArialMT;
   color: rgba(230, 67, 64, 1);
-  /* margin-top: 38rpx; */
 }
 
 .price {
@@ -120,6 +117,10 @@
   font-weight: 400;
   color: rgba(102, 102, 102, 1);
   margin-top: 5rpx;
+}
+
+.allChan {
+  margin-left: 20rpx;
 }
 
 .small_text {
