--- a/pages/mine/index.wxss
+++ b/pages/mine/index.wxss
@@ -4,3 +4,145 @@
 	height: 100vh;
 	background-color: #f8f8f8;
 }
+
+.view-bg{
+	width: 100%;
+	height:auto;
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 48rpx;
+}
+
+.view-bg-image{
+	width: 100%;
+	height: 340rpx;
+}
+
+.view-info{
+	width: 100%;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	margin-top: -70rpx;
+}
+
+.view-info-image{
+	width: 140rpx;
+	height: 140rpx;
+	display: block;
+}
+
+.view-info-title{
+	color: #333333;
+	font-size: 34rpx;
+	font-weight: 400;
+	text-align: center;
+	margin-top: 15rpx;
+}
+
+.view-order{
+	flex: 1;
+	height: auto;
+	margin: 0 32rpx;
+	box-sizing: border-box;
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+	flex-direction: column;
+	background-color: #fff;
+	margin-bottom: 20rpx;
+}
+
+.view-order-state{
+	width: 100%;
+	height: 80rpx;
+	padding: 0 24rpx;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: row;
+	border-bottom: 1rpx solid #eeeeee;
+}
+
+.view-order-title{
+	flex: 1;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	text-align: left;
+	color: #333333;
+	font-size: 30rpx;
+}
+
+.view-order-text{
+	height: 100%;
+	color: #999999;
+	font-size: 24rpx;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+.view-order-row{
+	width: 100%;
+	height: auto;
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+	flex-direction: row;
+}
+
+.view-order-type{
+	width: 20%;
+	height: 150rpx;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.view-order-type-title{
+	font-size: 24rpx;
+	color: #333333;
+	text-align: center;
+	margin-top: 6rpx;
+}
+
+.view-from{
+	width: 100%;
+	height: auto;
+	padding: 0 32rpx;
+	box-sizing: border-box;
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+	flex-direction: column;
+	border-radius: 8rpx;
+	overflow: hidden;
+}
+
+.view-from-row{
+	width: 100%;
+	height: 100rpx;
+	padding: 0 24rpx;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	flex-direction: row;
+	background-color: #fff;
+	border-bottom: 1rpx solid #eeeeee;
+}
+
+.view-from-row:last-child{
+	border-bottom:none
+}
+
+.view-from-row-title{
+	flex: 1;
+	color: #333333;
+	font-size: 30rpx;
+	margin-left: 15rpx;
+}
