--- a/pages/shop/index.wxml
+++ b/pages/shop/index.wxml
@@ -1,38 +1,43 @@
 <!--pages/drugOrder/drugOrder.wxml-->
-<view class='drug-order'>
-  <scroll-view class='scroll' scroll-y="true" wx:if="{{carts.length !== 0}}">
-    <view class='cart_container' wx:for="{{carts}}" wx:key="index">
-      <view class='item-select'>
-        <van-checkbox value="{{ item.isSelect }}" bind:change="switchSelect" data-index="{{index}}" data-id="{{index}}">
-        </van-checkbox>
-      </view>
-      <image class='item-image' data-id='{{item.id}}' src='{{item.imgSrc}}' bindtap='selectDelete'></image>
-      <view class='column'>
-        <view class="top">
-          <text class='title'>{{item.title}}</text>
-          <text class='desc'>{{item.desc}}</text>
-        </view>
-        <view class='row'>
-          <text class='sku-price'>￥{{item.price}}</text>
-          <view class='sku'>
-            <text class='sub' bindtap='quantityChange' id='sub' data-index="{{index}}">-</text>
-            <text class='number'>{{item.count.quantity}}</text>
-            <text class='add' bindtap='quantityChange' id='add' data-index="{{index}}">+</text>
-          </view>
-        </view>
-      </view>
-    </view>
-  </scroll-view>
+<view class="shop-top">
+  <view class="shop-top-left">
+    <van-checkbox value="{{ isAllSelect }}" bind:change="selectAll"></van-checkbox>
+    <text class='small_text'>全选</text>
+  </view>
+  <text class="shop-top-right" bindtap="toEdit">{{edit?'删除':'编辑'}}</text>
+</view>
 
-  <view class='bottom_total'>
-    <view class='bottom_row'>
-      <view class='allChan'><van-checkbox value="{{ isAllSelect }}" bind:change="selectAll"></van-checkbox></view>
-      <text class='small_text'>全选</text>
-      <text class="total">合计：</text>
-      <text class='price'>￥{{totalMoney}}</text>
-      <view class='button-red button' bindtap='allDelete'>结算（{{totalIndex}}）</view>
+<scroll-view class='scroll' scroll-y="true" wx:if="{{carts.length !== 0}}">
+  <view class='cart_container' wx:for="{{carts}}" wx:key="index">
+    <view class='item-select'>
+      <van-checkbox value="{{ item.isSelect }}" bind:change="switchSelect" data-index="{{index}}" data-id="{{index}}">
+      </van-checkbox>
+    </view>
+    <image class='item-image' data-id='{{item.id}}' src='{{item.imgSrc}}' bindtap='selectDelete'></image>
+    <view class='column'>
+      <view class="top">
+        <text class='title'>{{item.title}}</text>
+        <text class='desc'>{{item.desc}}</text>
+      </view>
+      <view class='row'>
+        <text class='sku-price'>￥{{item.price}}</text>
+        <view class='sku'>
+          <text class='sub' bindtap='quantityChange' id='sub' data-index="{{index}}">-</text>
+          <text class='number'>{{item.count.quantity}}</text>
+          <text class='add' bindtap='quantityChange' id='add' data-index="{{index}}">+</text>
+        </view>
+      </view>
     </view>
   </view>
+</scroll-view>
 
-  <noData wx:if="{{carts.length === 0}}" height="{{100}}" title="{{'暂无数据'}}" />
+<view class='bottom_total'>
+  <view class='bottom_total-nul'>
+    <text class="total">合计：</text>
+    <text class='price'>￥{{totalMoney}}</text>
+  </view>
+  <view class='button-delete' wx:if="{{edit}}" bindtap='allDelete'>删除</view>
+  <view class='button-btn' wx:else bindtap='toConfirmOrder'>结算({{totalIndex}})</view>
 </view>
+
+<noData wx:if="{{carts.length === 0}}" height="{{100}}" title="{{'暂无数据'}}" />
