--- a/pages/shop/index.wxss
+++ b/pages/shop/index.wxss
@@ -11,20 +11,57 @@
   min-height: 100vh;
 }
 
+.shop-top {
+  width: 100%;
+  height: 90rpx;
+  padding: 24rpx;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f8f8f8;
+  flex-direction: row;
+  position: fixed;
+  top:0;
+  left:0;
+  right:0;
+  z-index: 1;
+}
+
+.shop-top-left {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+
+.shop-top-right {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  font-size: 30rpx;
+  color: #333333;
+}
+
 .cart_container {
   display: flex;
   flex-direction: row;
   border-radius: 10rpx;
   background-color: #fff;
   padding: 0 20rpx;
-  margin-top: 20rpx;
+  margin-bottom: 20rpx;
   box-sizing: border-box;
 }
 
 .scroll {
   box-sizing: border-box;
-  padding: 0 24rpx 20rpx 24rpx;
+  padding: 0 24rpx;
+  margin-top: 90rpx;
   margin-bottom: 100rpx;
+  background-color: #f8f8f8;
 }
 
 .column {
@@ -91,8 +128,8 @@
 }
 
 .price {
-  color: red;
-  position: relative;
+  color: #FF303A;
+  font-size: 36rpx;
 }
 
 .title {
@@ -196,49 +233,63 @@
   width: 180rpx;
   height: 180rpx;
   margin: 20rpx;
+  border-radius: 4rpx;
 }
 
 .bottom_total {
-  position: fixed;
   display: flex;
-  flex-direction: column;
-  bottom: 0;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: row;
   width: 100%;
   height: 100rpx;
-  line-height: 100rpx;
-  background: white;
-  border-top: 1rpx solid #ccc;
+  padding: 0 24rpx;
+  box-sizing: border-box;
+  background-color: white;
+  border-top: 1rpx solid #eeeeee;
+  position: fixed;
+  left: 0;
+  bottom: 0;
 }
 
-.bottom_row {
+.bottom_total-nul {
+  flex: 1;
+  height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
   align-items: center;
+  justify-content: flex-end;
+  margin-right: 20rpx;
 }
 
 .total {
   color: #333333;
-  font-size: 32rpx;
+  font-size: 28rpx;
 }
 
-.button-red {
-  color: #ffffff;
-  font-size: 13;
-  background-color: #f44336;
-}
-
-.button {
-  position: fixed;
-  right: 0;
-  color: white;
-  text-align: center;
-  display: inline-block;
+.button-btn {
+  width: 224rpx;
+  height: 80rpx;
+  color: #FFFFFF;
   font-size: 30rpx;
-  border-radius: 0rpx;
-  width: 30%;
-  height: 100rpx;
-  line-height: 100rpx;
+  border-radius: 40rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FF4E56;
+  border: 1rpx solid #FF4E56;
+}
+
+.button-delete{
+  width: 224rpx;
+  height: 80rpx;
+  color: #FF4E56;
+  font-size: 30rpx;
+  border-radius: 40rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1rpx solid #FF4E56;
 }
 
 .no-list {
