--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,1 +1,27 @@
 /* pages/index.wxss */
+.container {
+	width: 100%;
+	height: 100vh;
+	position: relative;
+}
+
+image {
+	width: 100%;
+	height: 100vh;
+}
+
+video {
+	width: 100%;
+	height: 100vh;
+}
+
+text {
+	position: absolute;
+	top: 100rpx;
+	left: 20rpx;
+	color: #fff;
+	font-size: 14px;
+	padding: 7px 15px;
+	border:1px solid #eeeeee;
+	border-radius: 30px;
+}
