--- a/pages/shop/index.wxss
+++ b/pages/shop/index.wxss
@@ -258,7 +258,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
   margin-right: 20rpx;
 }
 
