--- a/subcontract/pages/webView/index.wxml
+++ b/subcontract/pages/webView/index.wxml
@@ -1,2 +1,4 @@
 <!--subcontract/pages/webView/index.wxml-->
-<text>subcontract/pages/webView/index.wxml</text>
+<view class="view">
+	<web-view src="{{url}}"></web-view>
+</view>
